@@ -7,6 +7,7 @@ alsa-lib (1.0.25-2) UNRELEASED; urgency=low
     of multiarch). Simplify debian/rules bi-arch bits assuming the install
     dir is /usr/lib32 and doing no other calculations.
   * Handle installation of bi-arch files with .install files.
+  * Use sed -i to modify bi-arch build Makefile.
   * Use dh_installdocs to install Doxygen documentation.
 
  -- Jordi Mallach <jordi@debian.org>  Tue, 31 Jan 2012 01:01:41 +0100
